[package]
name = "scrbrd"
version = "0.1.0"
edition = "2024"
authors = ["Chuck Swung <chuckswung@gmail.com>"]
description = "A minimal terminal sports scoreboard using ESPN API"
license = "MIT"
repository = "https://github.com/chuckswung/scrbrd"
homepage = "https://github.com/chuckswung/scrbrd"
keywords = ["sports", "scoreboard", "scorebug", "terminal", "cli",]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "scrbrd"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }