[package]
name = "scrbrd"
version = "0.2.0"
edition = "2024"
authors = ["Chuck Swung <chuckswung@gmail.com>"]
description = "a tui sports tracker for real-time scores and status"
license = "MIT"
repository = "https://github.com/chuckswung/scrbrd"
homepage = "https://github.com/chuckswung/scrbrd"
keywords = ["sports", "score", "scoreboard", "terminal", "cli", "tui"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "scrbrd"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.2", features = ["json"] }